[package]
name = "box2d_rs"
version = "0.1.0"
authors = ["yangfeng <yangfengzzz@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serde_support = ["serde", "strum", "strum_macros"]

[dependencies]
serde = {version = "1.0.111", features = ["derive"],  optional = true}
strum = {version = "0.19",  optional = true}
strum_macros = {version ="0.19",  optional = true}